Update classes to accept user role and docker config